@@ -57,4 +57,5 @@
 - Do not require unnecessary configuration {pull}18003[18003]
 - Use nested objects so fleet can handle metadata correctly {pull}18234[18234]
 - Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]
+- More clear output of inspect command {pull}18405[18405]
 - Pick up version from libbeat {pull}18350[18350]
